@@ -320,7 +320,7 @@ class sudoku:
 	setOddEvenArray = setEvenOddArray
 	
 	
-	from ._multiCell import setFortress,setKropkiWhite,setKropkiBlack,setKropkiGray,setKropkiWhiteArray,setKropkiBlackArray,setKropkiGrayArray,setKropkiArray,setKropkiNegative,setAntiKropki,setAntiKropkiArray,_applyKropkiNegative,setKropkiDifference,setKropkiRatio,setGammaEpsilon,setXVV,setXVX,setXVVArray,setXVXArray,setXVArray,setAntiXV,setAntiXVArray,setXVNegative,_applyXVNegative,setXVXVV,setXVXVX,setXVXVVArray,setXVXVXArray,setXVXVArray,setAntiXVXV,setAntiXVXVArray,setXVXVNegative,_applyXVXVNegative,setXYDifference,setXYDifferenceArray,setAntiXYDifference,setAntiXYDifferenceArray,setXYDifferenceNegative,_applyXYDifferenceNegative,setEitherOr,setEitherOrArray,setCloneRegion,setDominantCloneRegion,setShakenCloneRegion,setCage,setRepeatingCage,setMedianCage,setBlockCage,setMOTECage,setMETOCage,setUniparityCage,setEquiparityCage,setAllOddOrEven,setPuncturedCage,setPsychoKillerCage,setKnappDanebenCage,setCapsule,setDavidAndGoliath,setDigitCountCage,setVault,setZone,setLookAndSayCage,setPsychoLookAndSayCage,setOrderSumCages,setMagicSquare,setEntropkiWhite,setEntropkiBlack,setEntropkiWhiteArray,setEntropkiBlackArray,setEntropkiArray,setParityDotWhite,setParityDotBlack,setParityDotWhiteArray,setParityDotBlackArray,setParityDotArray,setGenetic,setGeneticArray,setParitySnake,setConsecutiveChainRegion,setAntiQueenCell,setTripleTab
+	from ._multiCell import setFortress,setKropkiWhite,setKropkiBlack,setKropkiGray,setKropkiWhiteArray,setKropkiBlackArray,setKropkiGrayArray,setKropkiArray,setKropkiNegative,setAntiKropki,setAntiKropkiArray,_applyKropkiNegative,setKropkiDifference,setKropkiRatio,setGammaEpsilon,setXVV,setXVX,setXVVArray,setXVXArray,setXVArray,setAntiXV,setAntiXVArray,setXVNegative,_applyXVNegative,setXVXVV,setXVXVX,setXVXVVArray,setXVXVXArray,setXVXVArray,setAntiXVXV,setAntiXVXVArray,setXVXVNegative,_applyXVXVNegative,setXYDifference,setXYDifferenceArray,setAntiXYDifference,setAntiXYDifferenceArray,setXYDifferenceNegative,_applyXYDifferenceNegative,setEitherOr,setEitherOrArray,setCloneRegion,setDominantCloneRegion,setShakenCloneRegion,setCage,setRepeatingCage,setMedianCage,setBlockCage,setMOTECage,setMETOCage,setUniparityCage,setEquiparityCage,setAllOddOrEven,setPuncturedCage,setPsychoKillerCage,setKnappDanebenCage,setCapsule,setDavidAndGoliath,setDigitCountCage,setVault,setZone,setLookAndSayCage,setPsychoLookAndSayCage,setOrderSumCages,setMagicSquare,setEntropkiWhite,setEntropkiBlack,setEntropkiWhiteArray,setEntropkiBlackArray,setEntropkiArray,setParityDotWhite,setParityDotBlack,setParityDotWhiteArray,setParityDotBlackArray,setParityDotArray,setGenetic,setGeneticArray,setParitySnake,setConsecutiveChainRegion,setAntiQueenCell,setTripleTab,setEqualSumCages
 	
 	from ._externalClues import setLittleKiller,setXSumBase,setXSum,setReverseXSum,setDoubleXSum,setXKropki,setNumberedRoomBase,setNumberedRoom,setReverseNumberedRoom,setSandwichSum,setOpenfacedSandwichSum,setBeforeNine,setBattlefield,setPositionSum,_setDigitsInBlock,setOutside,setOutsideDiagonal,setOutsideLength,setCornerEdge,setRossini,setRossiniLength,setRossiniNegative,_applyRossiniNegative,setMaxAscending,setSkyscraper,setSkyscraperSum,setNextToNine,setMaximumRun,setMaximumTriplet,setDescriptivePair,setMinimax,setMaximin,setFullRank,setParityParty,setSumSandwich,setAscendingStarter,setFirstSeenParity,setFirstSeenEntropy,setFirstSeenModular,setPointingDifferents
 	
